src/test/deca/context/invalid/created/use_this_main.deca
// Description:
//      Appel de this dans main
// Resultats:
//      Erreur contexte Ligne 11 : 'this' must be used inside a class

class A {
	protected int x;
}

{
    this.x;
}
